--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,11 @@
     <string name="button_goto_register">Sign up</string>
     <string name="register_header">Sign up with your credentials</string>
     <string name="button_register">Sign up</string>
+
+    <!-- Плейсхолдер строки полного имени, конкантенирующий имя и фамилию -->
+    <string name="full_name">%1$s %2$s</string>
+    <string name="loan_approved">Loan approved</string>
+    <string name="loan_registered">Loan registered</string>
+    <string name="loan_rejected">Loan rejected</string>
+    <string name="loan_status_image_description">Loan status image</string>
 </resources>
