В уведомление с упоминанием о необходимости погасить задолженность добавлен deep link. При нажатии на уведомление, откроется детальная информация о займе. Для правильной работы бекстека при открытии приложения через диплинк, проверка на логин перенесена в LoansListFragment.kt и LoansViewModel.kt.

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -28,7 +28,7 @@
     <string name="loan_create_header">Создать заём</string>
     <string name="loan_create_amount_header">Сумма займа</string>
     <string name="loan_create_amount_description">ВЫберите сумму займа</string>
-    <string name="loan_create_period">Срок займа: %1$d d.</string>
+    <string name="loan_create_period">Срок займа: %1$d д.</string>
     <string name="loan_create_percent">Процентная ставка: %1$.2f %%</string>
     <string name="loan_create_percent_sum_sub">Процент</string>
     <string name="loan_create_amount_sub">Сумма займа</string>
